Add management dashboard, step 3
